Update c by rnk2 eng.html

--- a/c by rnk2 eng.html
+++ b/c by rnk2 eng.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computer Science Grade 10th</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Highlight.js CSS for a dark theme -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/atom-one-dark.min.css">
     <style>
         body {
@@ -50,6 +49,22 @@
             padding: 1rem;
             color: #a0aec0;
         }
+        /* Back button styles */
+        .back-btn {
+            display: inline-block;
+            margin-top: 2rem;
+            padding: 0.75rem 1.5rem;
+            background-color: #4fd1c5;
+            color: #1a202c;
+            border-radius: 9999px;
+            font-weight: bold;
+            text-decoration: none;
+            transition: transform 0.3s, background-color 0.3s;
+        }
+        .back-btn:hover {
+            transform: translateY(-3px);
+            background-color: #38b2ac;
+        }
     </style>
 </head>
 <body class="bg-gray-900 text-gray-200">
@@ -61,7 +76,6 @@
         </header>
 
         <main>
-            <!-- Structure of C Language -->
             <div class="card">
                 <h2 class="text-2xl font-semibold mb-4 text-teal-300">Structure of C Language</h2>
                 <p>Everything has its own structure, and similarly, the C language also has its own specific structure. Let's examine what components are included in it.</p>
@@ -95,13 +109,16 @@ int main() {
 }</code></pre>
             </div>
         </main>
+        
+        <div class="text-center mt-8">
+            <a href="index.html" class="back-btn">← Back to Language Selection</a>
+        </div>
     </div>
 
     <div class="footer">
         <h2 class="text-xl font-semibold text-teal-300">Created and Designed by Najaf</h2>
     </div>
 
-    <!-- Highlight.js to enable syntax highlighting -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
     <script>
         // Tell Highlight.js to find and highlight all code blocks
