--- a/index (1).html
+++ b/index (1).html
@@ -193,7 +193,7 @@
         </div>
         
         <div class="footer">
-            <p>&copy; 2023 Complete C Language. All rights reserved.</p>
+            <p>Complete C by RNK | Created by Najaf</p>
         </div>
     </div>
 
